<resources>
    <string name="activity_package_delete_confirm_title">Attention</string>
    <string name="add_frequent_phrases">Add frequent phrases</string>
    <string name="all_call_livetalk_enable">Using top-up package for domestic and international calls</string>
    <string name="all_call_livetalk_remain_mins">Minutes remaining: %1$s domestic or %2$s international</string>
    <string name="always">Always</string>
    <string name="alwaysUsePrompt">Remember my choice</string>
    <string name="android_activity_resolver_use_always">@android:string/font_family_body_1_material</string>
    <string name="android_activity_resolver_use_once">@android:string/font_family_caption_material</string>
    <string name="android_add_account_label">@android:string/durationDays</string>
    <string name="android_aerr_application">@android:string/durationHourMinute</string>
    <string name="android_aerr_process">@android:string/durationSeconds</string>
    <string name="android_aerr_title">@android:string/serviceEnabled</string>
    <string name="android_anr_activity_application">@android:string/CfMmi</string>
    <string name="android_anr_activity_process">@android:string/CwMmi</string>
    <string name="android_anr_application_process">@android:string/BaMmi</string>
    <string name="android_anr_process">@android:string/PwdMmi</string>
    <string name="android_anr_title">@android:string/PinMmi</string>
    <string name="android_bugreport_message">@android:string/permgroupdesc_costMoney</string>
    <string name="android_byteShort">@android:string/permgrouplab_location</string>
    <string name="android_common_last_name_prefixes">@android:string/permgrouplab_phoneCalls</string>
    <string name="android_common_name_conjunctions">@android:string/permgrouplab_systemTools</string>
    <string name="android_common_name_prefixes">@android:string/permgroupdesc_systemTools</string>
    <string name="android_common_name_suffixes">@android:string/permgrouplab_developmentTools</string>
    <string name="android_fast_scroll_alphabet">@android:string/permdesc_manageAccounts</string>
    <string name="android_force_close">@android:string/permlab_writeSyncSettings</string>
    <string name="android_forward_intent_to_owner">@android:string/permdesc_subscribedFeedsRead</string>
    <string name="android_forward_intent_to_work">@android:string/permlab_subscribedFeedsWrite</string>
    <string name="android_gigabyteShort">@android:string/permlab_readDictionary</string>
    <string name="android_kilobyteShort">@android:string/lockscreen_transport_play_description</string>
    <string name="android_lockscreen_emergency_call">@android:string/lockscreen_access_pattern_cleared</string>
    <string name="android_lockscreen_forgot_pattern_button_text">@android:string/keyguard_accessibility_add_widget</string>
    <string name="android_lockscreen_missing_sim_message_short">@android:string/keyguard_accessibility_face_unlock</string>
    <string name="android_megabyteShort">@android:string/preposition_for_time</string>
    <string name="android_noApplications">@android:string/smv_process</string>
    <string name="android_power_off">@android:string/mediasize_chinese_prc_7</string>
    <string name="android_reboot_safemode_confirm">@android:string/mediasize_japanese_jis_b0</string>
    <string name="android_reboot_safemode_title">@android:string/mediasize_japanese_jis_exec</string>
    <string name="android_report">@android:string/done_label</string>
    <string name="android_safe_media_volume_warning">@android:string/stk_cc_ussd_to_ussd</string>
    <string name="android_shutdown_confirm">@android:string/mediaSize_iso_c5</string>
    <string name="android_shutdown_confirm_question">@android:string/mediaSize_iso_c6</string>
    <string name="android_shutdown_progress">@android:string/mediaSize_iso_c7</string>
    <string name="android_ssl_certificate">?unknown_ref: 1040705</string>
    <string name="android_storage_usb">?unknown_ref: 1040735</string>
    <string name="android_usb_cd_installer_notification_title">?unknown_ref: 104076f</string>
    <string name="android_usb_mtp_notification_title">?unknown_ref: 104077b</string>
    <string name="android_usb_ptp_notification_title">?unknown_ref: 104077e</string>
    <string name="android_volume_alarm">?unknown_ref: 10407a0</string>
    <string name="android_volume_icon_description_bluetooth">?unknown_ref: 10407a5</string>
    <string name="android_volume_icon_description_incall">?unknown_ref: 10407a6</string>
    <string name="android_volume_icon_description_media">?unknown_ref: 10407a7</string>
    <string name="android_volume_icon_description_notification">?unknown_ref: 10407a8</string>
    <string name="android_volume_icon_description_ringer">?unknown_ref: 10407a9</string>
    <string name="android_wait">?unknown_ref: 10407ba</string>
    <string name="android_whichApplication">?unknown_ref: 10407d1</string>
    <string name="android_whichApplicationNamed">?unknown_ref: 10407d3</string>
    <string name="android_whichEditApplication">?unknown_ref: 10407d4</string>
    <string name="android_whichEditApplicationNamed">?unknown_ref: 10407d6</string>
    <string name="android_whichHomeApplication">?unknown_ref: 10407d8</string>
    <string name="android_whichHomeApplicationNamed">?unknown_ref: 10407da</string>
    <string name="android_whichSendApplication">?unknown_ref: 10407e2</string>
    <string name="android_whichSendApplicationNamed">?unknown_ref: 10407e4</string>
    <string name="android_whichViewApplication">?unknown_ref: 10407e8</string>
    <string name="android_whichViewApplicationNamed">?unknown_ref: 10407ea</string>
    <string name="android_wifi_tether_configure_ssid_default">?unknown_ref: 1040810</string>
    <string name="android_wireless_display_route_description">?unknown_ref: 1040818</string>
    <string name="apply_password_action">OK</string>
    <string name="apply_password_confirm_dlg_msg">Use your current lock screen password to access settings for %s.</string>
    <string name="apply_password_confirm_dlg_title">%s password</string>
    <string name="auto_disable_screenbuttons_disable_toast_text">Navigation buttons disabled, double tap any button to turn them back on</string>
    <string name="auto_disable_screenbuttons_enable_toast_text">Navigation buttons enabled</string>
    <string name="auto_disable_screenbuttons_float_text">Touch to disable navigation buttons</string>
    <string name="auto_disable_screenbuttons_prompts_message">Double tap any button to turn navigations back on at any time.</string>
    <string name="auto_disable_screenbuttons_prompts_not_show_again">Don\'t show again</string>
    <string name="auto_disable_screenbuttons_prompts_ok">OK</string>
    <string name="auto_disable_screenbuttons_prompts_title">Disable navigation buttons?</string>
    <string name="auto_disable_screenbuttons_tap_again_exit_toast_text">Tap again to exit</string>
    <string name="auto_start_warning_allow">Allow</string>
    <string name="auto_start_warning_deny">Deny</string>
    <string name="auto_start_warning_title">Allow %s to start automatically?</string>
    <string name="autofill">Autofill</string>
    <string name="autofill_save_message">Allow MIUI to save your accounts and passwords?</string>
    <string name="autofill_save_ok">Allow</string>
    <string name="autofill_save_sub_message">You\'ll be able to manage saved passwords in Settings &gt; Passwords &amp; security &gt; %s.</string>
    <string name="autofill_save_title">Save passwords automatically</string>
    <string name="autofill_service_name">Manage passwords</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_sure">OK</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_delete">Uninstall</string>
    <string name="button_text_delete_timer">Uninstall (%d)</string>
    <string name="button_text_next_step">Next</string>
    <string name="button_text_next_step_timer">Next (%d)</string>
    <string name="call_record_or"> or </string>
    <string name="caller_info_name_delimiter"> or </string>
    <string name="cancel_action">Cancel</string>
    <string name="close">Off</string>
    <string name="config_camera_component">com.android.camera/com.android.camera.Camera</string>
    <string name="config_flipArea">803 0 1883 2250</string>
    <string name="config_xiaoaiComponent">com.miui.voiceassist/com.xiaomi.voiceassistant.VoiceService</string>
    <string name="configure_input_methods">Choose keyboards</string>
    <string name="confirm_cancel_task_files">Cancel sending files to %1$s?</string>
    <string name="confirm_cancel_task_images">Cancel sending images to %1$s?</string>
    <string name="content_description_dial">Call</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_share">Share</string>
    <string name="content_description_translate">Translate</string>
    <string name="content_description_web_url">Browse</string>
    <string name="copy">Copy</string>
    <string name="customer_location_judgment">China</string>
    <string name="cut">Cut</string>
    <string name="data_usage_context">If WLAN is not turned on, your device will connect to a mobile network, which may result in additional charges depending on your payment plan.Thank you!</string>
    <string name="default_device_name">Unknown device</string>
    <string name="default_name">Default</string>
    <string name="description_title">Silent mode</string>
    <string name="device_name_with_ellipsize">%1$s…</string>
    <string name="device_status_failed">Couldn\'t send</string>
    <string name="device_status_sending">Sending…</string>
    <string name="device_status_success">Sent successfully</string>
    <string name="device_status_waiting">Waiting…</string>
    <string name="device_type_pc">Computer</string>
    <string name="eighthours">8 hours</string>
    <string name="enable_livetalk_summary">Save 70% on your calling charges</string>
    <string name="enable_livetalk_title">Turn on Top-up package</string>
    <string name="enable_midrop">Turn on</string>
    <string name="fc_dialog_body">Send bug report to Mi for analysis? This report may contain Personally Identifiable Information. Your report will be used to help fix this bug and will never be shared in any commercial context.</string>
    <string name="fc_dialog_jump_to_preview">View summary</string>
    <string name="fourhours">2 hours</string>
    <string name="help">Can\'t find devices?</string>
    <string name="input_method_clipboard_clear_all_button">Clear all</string>
    <string name="input_method_clipboard_settings_button">Settings</string>
    <string name="input_method_clipboard_tips">Copied items will be deleted from clipboard after 48 hours</string>
    <string name="input_method_edit_phrase_text">Edit frequent phrases</string>
    <string name="input_method_no_content_text">No items here yet</string>
    <string name="input_method_tab_clipboard_text">Clipboard</string>
    <string name="input_method_tab_phrase_text">Frequent phrases</string>
    <string name="onehour">30 minutes</string>
    <string name="security_permission_open_wifi_settings">Open WLAN settings</string>
    <string name="security_permission_validate_warning">Thank you for helping make MIUI better!</string>
    <string name="security_share_text">Privacy protection</string>
    <string name="send_files_to">Send items to</string>
    <string name="silence_mode">Silent mode</string>
    <string name="standard">Silent</string>
    <string name="start_security_permission_verify_text">Verify permissions with your Mi Account</string>
    <string name="throwing_print">Print</string>
    <string name="throwing_screen">Cast</string>
    <string name="tips_prompt_enable_midrop">Share files with devices nearby</string>
    <string name="total">DND</string>
    <string name="twohours">1 hour</string>
</resources>