<?xml version="1.0" encoding="utf-8"?>
<miui.view.RingerModeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:miui="http://schemas.android.com/apk/res/miui" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/ringer_mode_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@+id/silence_mode_content" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/silent_mode_content_height">
        <TextView android:id="@+id/silence_mode_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silence_mode" android:layout_centerVertical="true" android:layout_marginStart="@dimen/silent_mode_title_margin_left" android:layout_alignParentStart="true" style="@style/SilentModeTitle"/>
        <miui.widget.SlidingButton android:id="@+id/slidingBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/silent_mode_sliding_button_margin_right" android:layout_alignParentEnd="true"/>
        <TextView android:id="@+id/remain_time_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/silent_mode_remaintime_title_margin_right" android:layout_toStartOf="@+id/slidingBtn" style="@style/RemainTimeTitle"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/silence_mode_expand_content" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/second_layer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/silent_mode_radiogroup_margin_bottom">
            <RadioGroup android:orientation="horizontal" android:id="@+id/radioGroup" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RadioButton android:textColor="@color/color_radiobutton" android:id="@+id/radiobtn_standard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/radiobutton" android:text="@string/standard" android:paddingStart="@dimen/silent_mode_standardbtn_padding_left" android:layout_marginStart="@dimen/silent_mode_standardbtn_margin_left"/>
                <RadioButton android:textColor="@color/color_radiobutton" android:id="@+id/radiobtn_total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/radiobutton" android:text="@string/total" android:paddingStart="@dimen/silent_mode_totalbtn_padding_left" android:layout_marginStart="@dimen/silent_mode_totalbtn_margin_left"/>
            </RadioGroup>
            <ImageView android:id="@+id/help_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/explain" android:layout_marginEnd="17dp" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/time_label" android:layout_width="match_parent" android:layout_height="@dimen/silent_mode_text_typical_height" android:layout_marginStart="@dimen/silent_mode_typical_margin_left" android:layout_marginEnd="@dimen/silent_mode_typical_margin_right">
            <TextView android:id="@+id/always" android:tag="0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/always" android:layout_centerVertical="true" android:layout_alignParentStart="true" style="@style/TimeLabel"/>
            <TextView android:id="@+id/eighthours" android:tag="4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eighthours" android:layout_centerVertical="true" android:layout_alignParentEnd="true" style="@style/TimeLabel"/>
            <TextView android:id="@+id/twohours" android:tag="2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/twohours" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/TimeLabel"/>
            <TextView android:gravity="center" android:id="@+id/onehour" android:tag="1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/onehour" android:layout_centerVertical="true" android:layout_toStartOf="@+id/twohours" android:layout_toEndOf="@+id/always" style="@style/TimeLabel"/>
            <TextView android:gravity="center" android:id="@+id/fourhours" android:tag="3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fourhours" android:layout_centerVertical="true" android:layout_toStartOf="@+id/eighthours" android:layout_toEndOf="@+id/twohours" style="@style/TimeLabel"/>
        </RelativeLayout>
        <TextView android:id="@+id/remain_time_2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/silent_mode_text_typical_height" style="@style/SeekbarTime"/>
        <miui.widget.SeekBar android:id="@+id/timer_seekbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/silent_mode_seekbar_margin_top" android:max="100" android:progress="0" android:secondaryProgress="0" android:progressDrawable="@drawable/timer_seekbar_progress" android:thumb="@drawable/volume_seekbar_thumb" android:layout_marginStart="@dimen/silent_mode_typical_margin_left" android:layout_marginEnd="@dimen/silent_mode_typical_margin_right"/>
    </LinearLayout>
    <View android:background="#26000000" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginStart="19dp"/>
</miui.view.RingerModeLayout>
