<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:miui="http://schemas.android.com/apk/res/miui" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/ll_file_type_container" android:background="@drawable/bg_transmission_file_type" android:padding="8dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/file_type_container_height" android:layout_marginLeft="25.45dp" android:layout_marginTop="12.7dp" android:layout_marginRight="25.45dp" android:layout_marginBottom="8.2dp"/>
    <TextView android:textSize="13.1sp" android:id="@+id/security_share_text" android:background="@drawable/bg_transmission_file_type" android:paddingTop="3dp" android:paddingBottom="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="19dp" android:text="@string/security_share_text" android:drawablePadding="4.3dp" android:layout_below="@+id/ll_file_type_container" android:drawableStart="@drawable/security_share" android:paddingStart="13dp" android:paddingEnd="13dp" android:layout_marginStart="2dp" android:layout_alignStart="@+id/ll_file_type_container"/>
    <RelativeLayout android:id="@+id/rl_send_to" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.45dp" android:layout_marginTop="10dp" android:layout_marginRight="25.45dp" android:layout_below="@+id/security_share_text">
        <TextView android:textSize="@dimen/send_file_to_textsize" android:textStyle="bold" android:textColor="@color/textcolor_file_send_to" android:ellipsize="end" android:gravity="start" android:id="@+id/tv_send_file_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_files_to" android:maxLines="2" android:textAlignment="viewStart" android:layout_marginEnd="2dp" android:layout_toStartOf="@+id/ll_link_menu" android:layout_alignParentStart="true"/>
        <TextView android:textSize="@dimen/help_textsize" android:textStyle="bold" android:textColor="@color/textcolor_help" android:ellipsize="end" android:gravity="start" android:id="@+id/tv_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/help" android:maxLines="1" android:layout_below="@+id/tv_send_file_to" android:textAlignment="viewStart" android:layout_marginEnd="2dp" android:layout_alignParentStart="true"/>
        <LinearLayout android:gravity="end" android:id="@+id/ll_link_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
            <ImageButton android:id="@+id/iv_printer" android:background="@drawable/bg_enable_midrop" android:layout_width="59.64dp" android:layout_height="40dp" android:src="@drawable/mishare_ic_printer" android:layout_centerVertical="true" android:contentDescription="@string/throwing_print"/>
            <ImageButton android:id="@+id/iv_throwing_screen" android:background="@drawable/bg_enable_midrop" android:layout_width="60.3dp" android:layout_height="40dp" android:src="@drawable/mishare_ic_cast" android:layout_centerVertical="true" android:contentDescription="@string/throwing_screen" android:layout_marginStart="10dp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/rl_device" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="21.8dp" android:layout_below="@+id/rl_send_to">
        <com.android.internal.widget.RecyclerView android:id="@+id/lv_scanned_device" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@android:color/transparent"/>
        <RelativeLayout android:gravity="center_vertical" android:id="@+id/rl_prompt_switch" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.45dp" android:layout_marginRight="25.45dp">
            <ImageView android:id="@+id/ic_midrop_enable" android:layout_width="60.36dp" android:layout_height="60.36dp" android:src="@drawable/ic_transmission_not_enable" android:layout_centerVertical="true" android:layout_marginEnd="8dp"/>
            <TextView android:textSize="@dimen/prompt_switch_tips_textsize" android:textColor="@color/textcolor_enable_midrop_tips" android:id="@+id/tv_prompt_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_prompt_enable_midrop" android:layout_centerVertical="true" android:lineSpacingExtra="2dp" android:layout_toStartOf="@+id/btn_enable_midrop" android:layout_toEndOf="@+id/ic_midrop_enable"/>
            <TextView android:textSize="14sp" android:textColor="@color/textcolor_enable_midrop" android:ellipsize="end" android:gravity="center" android:id="@+id/btn_enable_midrop" android:background="@drawable/bg_enable_midrop" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="40dp" android:text="@string/enable_midrop" android:layout_centerVertical="true" android:layout_marginStart="8dp" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <View android:id="@+id/bottom_divider" android:background="@color/bg_bottom_divider" android:layout_width="match_parent" android:layout_height="0.4dp" android:layout_marginLeft="25.45dp" android:layout_marginTop="17dp" android:layout_marginRight="25.45dp" android:layout_below="@+id/rl_device"/>
</RelativeLayout>
